/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package devtools.mobileharness.fe.v6.service.proto.host;

import "google/protobuf/timestamp.proto";

option java_package = "com.google.devtools.mobileharness.fe.v6.service.proto.host";
option java_multiple_files = true;
option java_outer_classname = "HostResourcesProto";

// Represents the comprehensive data required to render the Host Detail Page's
// overview section.
message HostOverview {
  string host_name = 1;
  string ip = 2;
  // The display name for the lab type, e.g., "Core Lab", "Satellite Lab
  // (SLaaS)".
  string lab_type_display_name = 3;
  // Lab server process information.
  LabServerInfo lab_server = 4;
  // Daemon server process information.
  DaemonServerInfo daemon_server = 5;
  // List of devices connected to this host.
  repeated DeviceSummary devices = 6;
  // Host-level properties.
  map<string, string> properties = 7;
  // OS of the host machine, e.g., "gLinux", "macOS".
  string os = 8;
}

// Host-level connectivity status with OmniLab master.
// FE will map State to icon/color: RUNNING->green/check_circle,
// MISSING->red/error
message HostConnectivityStatus {
  enum State {
    STATE_UNSPECIFIED = 0;
    RUNNING = 1;
    MISSING = 2;
    UNKNOWN = 3;
  }
  // The semantic state of connectivity.
  State state = 1;
  // The text to display for this state, e.g., "Running", "Missing".
  string title = 2;
  // Timestamp of when host was first detected as missing.
  // Only present if state = MISSING.
  google.protobuf.Timestamp missing_start_time = 3;
  // Tooltip text generated by backend based on state.
  string tooltip = 4;
}

// Lab server process information.
// FE will map ActivityState to icon/color/spinning per state:
// STARTED->green/check, STARTED_BUT_DISCONNECTED->yellow/warning,
// STARTING->blue/sync+spin, etc.
message LabServerInfo {
  enum ActivityState {
    ACTIVITY_STATE_UNSPECIFIED = 0;
    STARTED = 1;
    STARTED_BUT_DISCONNECTED = 2;
    STARTING = 3;
    ERROR = 4;
    DRAINING = 5;
    DRAINED = 6;
    STOPPING = 7;
    STOPPED = 8;
    UNKNOWN = 9;
  }
  message Activity {
    // The semantic state of lab server activity.
    ActivityState state = 1;
    // The text to display for this state, e.g., "Started", "Stopping".
    string title = 2;
    // Tooltip text generated by backend based on state.
    string tooltip = 3;
  }
  // Host connectivity with OmniLab master.
  HostConnectivityStatus connectivity = 1;
  // Activity is optional; it will be absent if release_status is null (e.g.
  // Core Labs)
  Activity activity = 2;
  string version = 3;
  string pass_through_flags = 4;
}

// Daemon server process information.
// FE will map State to icon/color: RUNNING->green/check_circle,
// MISSING->red/error
message DaemonServerInfo {
  enum State {
    STATE_UNSPECIFIED = 0;
    RUNNING = 1;
    MISSING = 2;
    UNKNOWN = 3;
  }
  message Status {
    // The semantic state of daemon server.
    State state = 1;
    // The text to display for this state, e.g., "Running", "Missing".
    string title = 2;
    // Timestamp of when daemon was first detected as missing.
    // Only present if state = MISSING.
    google.protobuf.Timestamp missing_start_time = 3;
    // Tooltip text generated by backend based on state.
    string tooltip = 4;
  }
  Status status = 1;
  string version = 2;
}

// A summary of a device connected to the host, for display in the device list.
message DeviceSummary {
  // TODO: Define device summary fields when device table design is
  // finalized.
}
