/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.lab;

import "src/devtools/mobileharness/api/model/proto/device.proto";

option java_package = "com.google.wireless.qa.mobileharness.lab.proto";

message MobileHarnessDeviceStatus {
  optional string id = 1;
  optional .mobileharness.api.model.DeviceStatus status = 2;
  optional int64 timestamp_ms = 3;
}

message GetDeviceStatusRequest {}

message GetDeviceStatusResponse {
  repeated MobileHarnessDeviceStatus device_status = 1;
}

service DeviceStatusService {
  // Gets the device status
  rpc GetDeviceStatus(GetDeviceStatusRequest)
      returns (GetDeviceStatusResponse) {}
}
